# OpenVault

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPER.md  README.md  ROADMAP.md  TODO.md  backlog.md  drizzle.config.ts  eslint.config.mjs  execution_plan.md  migrate_keychain.sh  package-lock.json  package.json  plan.md  tsconfig.json
.claude/: check-line-width.sh  settings.json  settings.local.json
.github/workflows/: no-plan-md.yml
drizzle/: 0000_furry_caretaker.sql  0001_young_puck.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
faq/: how_to_config_gmail_for_mfa.md  install_extensions.md
institutional_knowledge/td/: holdings.md
logs/: td_landing_page.txt  td_post_login.txt
scripts/: build-ui.ts
src/: accounts.ts  agent.ts  browser.ts  cli.ts  config.ts  gmail.test.ts  gmail.ts  keychain.ts  login.ts  memory.ts  storage.ts  wealthsimple.ts
src/agent/: browser.ts  cache.test.ts  cache.ts  claude.rs  claude.ts  index.ts  log_utils.ts  mod.rs  provider.ts  redact.test.ts  redact.ts  tools.rs  tools.ts
src/agent/log_utils/: console_log_utils.ts  file_log_utils.ts  index.ts
src/agent/model_providers/: anthropic.ts  index.ts  ollama.test.ts  ollama.ts  openai.ts  types.ts
src/agent/utils/: normalizeSnapshot.test.ts  normalizeSnapshot.ts
src/browser/: actions.rs  mod.rs  session.ts  snapshot.rs
src/commands/: accounts.ts  browser.ts  config.ts  demo_utils.test.ts  demo_utils.ts  institution.ts  sync.ts  transactions.ts  utils.test.ts  utils.ts
src/connectors/: index.ts
src/credentials/: index.ts  mod.rs
src/db/: index.ts  schema.ts  storage.test.ts  storage.ts
src/db/migrations/: 0001_ambiguous_gargoyle.sql  0002_melodic_misty_knight.sql  0003_safe_blonde_phantom.sql  0004_steady_dracula.sql  0006_add_account_category.sql
src/tasks/: accounts.ts  holdings.ts  login.ts  transactions.ts
src/ui/: server.ts
src/ui/client/: AccountsTable.tsx  App.tsx  Dashboard.tsx  HoldingsPage.tsx  Icons.tsx  InstBadge.tsx  NetWorthChart.tsx  Sidebar.tsx  TransactionsPage.tsx  api.ts  index.tsx  utils.ts
src/ui/demo/: accounts.ts  holdings.ts  transactions.ts
src/ui/public/: index.html
v0/: Cargo.toml  README.md
v0/src/: cli.rs  lib.rs  main.rs
v0/src/agent/: claude.rs
v0/src/browser/: ax.rs  (+4 more)
(+10 files in other folders)
