[package]
name = "openvault"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openvault"
path = "src/main.rs"

[dependencies]
# Browser automation (CDP)
chromiumoxide = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Credential store (OS keychain)
keyring = { version = "3", features = ["apple-native"] }

# Error handling
anyhow = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Platform data dirs
dirs = "5"

# Password prompt (no echo)
rpassword = "7"

# Async trait support
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
